* (bug 13135) Special:Userrights now passes IDs through form submission
  to allow functionality on not-quite-right usernames
* (bug 12575) Prevent duplicate patrol log entries from being created
* (bug 13174) __HIDDENCAT__ now applies only to category pages
* (bug 13031) Add links to user pages in e-mail form
* (bug 13147) Description for categoriespagetext (used in Special:Categories) reworded

=== API changes in 1.13 ===

* Fixing main page display in meta=siteinfo
* (bug 13128) Added patrolled flag to list=recentchanges
* Implemented {bl,ei,iu}redirect (lists links through redirects as well)
* (bug 13154) Introduced subpages flag to meta=siteinfo&siprop=namespaces
* (bug 13157) Added ucuserprefix parameter to list=usercontibs
* (bug 12394) Added rctitles parameter to list=recentchanges, making rcid retrieval easier

=== Languages updated in 1.13 ===

* Afrikaans (af)
* Gheg Albanian (aln)
* Amharic (am)
* Aragonese (an)
* Arabic (ar)
* Asturian (ast)
* Kotava (avk)
* Samogitian (bat-smg)
* Bulgarian (bg)
* Catalan (ca)
* Crimean Turkish (Cyrillic) (crh-cyrl)
* Crimean Turkish (Latin) (crh-latn)
* Czech (cs)
* Welsh (cy)
* Danish (da)
* Lower Sorbian (dsb)
* Greek (el)
* Esperanto (eo)
* Spanish (es)
* Estonian (et)
* Extremaduran (ext)
* Finnish (fi)
* Faroese (fo)
* French (fr)
* Franco-Provençal (frp)
* Friulian (fur)
* Irish (ga)
* Gan (gan)
* Galician (gl)
* Croatian (hr)
* Upper Sorbian (hsb)
* Hungarian (hu)
* Indonesian (id)
* Eastern Canadian (Unified Canadian Aboriginal Syllabics) (ike-cans)
* Icelandic (is)
* Italian (it)
* Japanese (ja)
* Georgian (ka)
* Kalaallisut (kl)
* Khmer (km)
* Latin (la)
* Luxembourgish (lb)
* Limburgish (li)
* Lao (lo)
* Lithuanian (lt)
* Malayalam (ml)
* Moldavian (mo)
* Marathi (mr)
* Low German (nds)
* Dutch (nl)
* Norwegian Nynorsk (nn)
* Norwegian (bokmål)‬ (no)
* Polish (pl)
* Pashto (ps)
* Portuguese (pt)
* Russian (ru)
* Yakut (sah)
* Sassaresu (sdc)
* Slovak (sk)
* Somali (so)
* Albanian (sq)
* Sranan Tongo (srn)